--- a/index.html
+++ b/index.html
@@ -1,6 +1,43 @@
+<!DOCTYPE html>
 <html>
-<head><title>firstpage</title></head>
+<head>
+	<meta charset="utf-8">
+	<meta name ="viewport" contextmenu="width=device-width,initial-scale=1">
+
+	<title>Responsive page1</title>
+	
+	<link rel="stylesheet" href="index.css">
+
+</head>
+
 <body>
-this is my first page published!
+<h1>Our Menu</h1>
+<div>
+<div class="col-lg-3 col-md-6" id="box1">
+	<div id="b1">Chicken</div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+</p> 
+</div>
+
+<div class="col-lg-3 col-md-6" id="box2">
+	<div id="b2">Beef</div>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+</p>
+</div>
+
+<div class="col-lg-3 col-lg-tablet"   id="box3">
+	<div id="b3">Sushi</div>
+	<p>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+</p>
+</div>
+
 </body>
 </html>
